--- a/Map.html
+++ b/Map.html
@@ -117,7 +117,7 @@
     function createCustomMarker() {
         const markerElement = document.createElement('div');
         markerElement.className = 'custom-marker';
-        markerElement.style.backgroundImage = 'url(marker.png)'; // Use the relative path to your marker image
+        markerElement.style.backgroundImage = 'url(https://shajidarman.github.io/ISWU_MAP/marker.png)'; // Use the relative path to your marker image
         return markerElement;
     }
 
